# checkers-java-jni-cpp

./: CMakeLists.txt  GameBoard.cpp  GameBoard.hpp  pom.xml  readme.md
src/main/cpp/include/: Board.h  Game.h  Piece.h  com_checkers_core_NativeInterface.h
src/main/cpp/src/: Board.cpp  Game.cpp  jni_bridge.cpp
src/main/java/com/checkers/: Main.java
src/main/java/com/checkers/core/: NativeInterface.java
src/main/java/com/checkers/ui/: GameBoard.java  GameWindow.java
src/test/cpp/: GameTest.cpp
src/test/java/com/checkers/core/: NativeInterfaceTest.java
src/test/java/com/checkers/ui/: GameBoardTest.java
